--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>株式会社イノベート - 未来を創造する</title>
+    <title>有村 大旭 - AIのスペシャリストへ</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -16,7 +16,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">ホーム</a></li>
                 <li><a href="self-intro.html">自己紹介</a></li>
-                <li><a href="services.html">サービス</a></li>
+                <li><a href="vision.html">ビジョン</a></li>
                 <li><a href="contact.html">お問い合わせ</a></li>
             </ul>
         </nav>
