--- a/self-intro.html
+++ b/self-intro.html
@@ -1,22 +1,31 @@
-<!-- about.html -->
 <!DOCTYPE html>
 <html lang="ja">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>会社概要 - 株式会社サンプル</title>
-    <link rel="stylesheet" href="style.css">
+    <title>自己紹介 - 有村大旭(アリムラ ヒロアキ)</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
-        body,
-        html {
+        :root {
+            --primary-color: #3498db;
+            --secondary-color: #2c3e50;
+            --accent-color: #e74c3c;
+            --bg-color: #ecf0f1;
+            --text-color: #34495e;
+        }
+
+        * {
             margin: 0;
             padding: 0;
-            font-family: 'Arial',
-                sans-serif;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
-            color: #333;
-            background-color: #ffffff;
+            color: var(--text-color);
+            background-color: var(--bg-color);
         }
 
         .container {
@@ -26,93 +35,202 @@
         }
 
         header {
-            background-color: #e6f2ff;
-            padding: 20px 0;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            background-color: white;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
         }
 
-        nav ul {
-            list-style-type: none;
-            padding: 0;
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 30px 0;
         }
 
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: #0066cc;
+        .logo {
+            font-size: 1.8em;
             font-weight: bold;
+            color: var(--primary-color);
         }
 
-        .hero {
-            background-color: #f0f8ff;
-            padding: 100px 0;
-            text-align: center;
+        .nav-links {
+            display: flex;
+            list-style: none;
         }
 
-        .hero h1 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            color: #0066cc;
+        .nav-links li {
+            margin-left: 40px;
         }
 
-        .cta-button {
-            display: inline-block;
-            background-color: #0066cc;
-            color: white;
-            padding: 10px 20px;
+        .nav-links a {
             text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
+            color: var(--secondary-color);
+            font-weight: 500;
+            font-size: 1.1em;
+            transition: color 0.3s ease;
         }
 
-        .features {
-            padding: 50px 0;
+        .nav-links a:hover {
+            color: var(--primary-color);
         }
 
-        .feature {
+        main {
+            padding-top: 100px;
+        }
+
+        .section {
+            padding: 80px 0;
+        }
+
+        .section h2 {
+            font-size: 2em;
             margin-bottom: 30px;
+            color: var(--secondary-color);
+        }
+
+        .profile-image {
+            text-align: center;
+            margin-bottom: 40px;
+        }
+
+        .profile-image img {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
+        .skill {
+            margin-bottom: 20px;
+        }
+
+        .skill h3 {
+            margin-bottom: 10px;
+        }
+
+        .skill-bar {
+            background-color: #ddd;
+            height: 20px;
+            border-radius: 10px;
+            overflow: hidden;
+        }
+
+        .skill-progress {
+            background-color: var(--primary-color);
+            height: 100%;
+            display: flex;
+            align-items: center;
+            padding-left: 10px;
+            color: white;
+            font-size: 0.8em;
         }
 
         footer {
-            background-color: #e6f2ff;
-            color: #0066cc;
+            background-color: var(--secondary-color);
+            color: white;
             text-align: center;
-            padding: 20px 0;
-            margin-top: 50px;
+            padding: 30px 0;
+        }
+
+        @media (max-width: 768px) {
+            .nav-links {
+                display: none;
+            }
+
+            main {
+                padding-top: 80px;
+            }
         }
     </style>
 </head>
+
 <body>
     <header>
-        <div class="container">
-            <nav>
-                <ul>
-                    <li><a href="index.html">ホーム</a></li>
-                    <li><a href="about.html">自己紹介</a></li>
-                    <li><a href="services.html">3年後の目標</a></li>
-                    <li><a href="contact.html">お問い合わせ</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="container">
+            <div class="logo">Hiroaki Arimura OJT Plan</div>
+            <ul class="nav-links">
+                <li><a href="index.html">ホーム</a></li>
+                <li><a href="self-intro.html">自己紹介</a></li>
+                <li><a href="vision.html">ビジョン</a></li>
+                <li><a href="contact.html">お問い合わせ</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <section id="about" class="features">
-            <div class="container">
-                <h1>会社概要</h1>
-                <p>株式会社サンプルは、2010年の設立以来、革新的なITソリューションを提供し続けています。私たちは、お客様のニーズを深く理解し、最適なソリューションを提案します。</p>
-                <!-- 会社概要の詳細情報を追加 -->
+        <div class="container">
+            <div class="profile-image">
+                <img src="images/IMG_4634.jpg" alt="有村大旭のプロフィール写真">
             </div>
-        </section>
+
+            <section id="about" class="section">
+                <h2>名前</h2>
+                <p>こんにちは、<strong>有村大旭(アリムラ ヒロアキ)</strong>です。近畿大学経済学部国際経済学科を卒業しました！</p>
+            </section>
+
+            <section id="job" class="section">
+                <h2>好きな食べ物</h2>
+                <p><strong>からあげ</strong>大好きです！ からあげを食べた数なら負けません！最近、自炊サボってやよい軒のからあげ定食ばかり食べてます！美味しいからあげ屋さんあれば、教えてください！</p>
+            </section>
+
+            <section id="hobby" class="section">
+                <h2>マイブーム</h2>
+                <ol>
+                    <li><strong>キングダム</strong>にめっちゃハマっています！高校生の時に中国史の勉強もっとやっておけばよかったと後悔しました、、、</li>
+                    <li><strong>洋ロック</strong>好きです！特にNirvana, Foofighters, Queenなどなど</li>
+                    <li>お笑い芸人のラジオを聴くのも好きです！特にロバート、くりいむしちゅー、ダイアンなど</li>
+                </ol>
+            </section>
+
+            <section id="programming" class="section">
+                <h2>プログラミング経験</h2>
+                <div class="skill">
+                    <h3>HTML/CSS</h3>
+                    <div class="skill-bar">
+                        <div class="skill-progress" style="width: 60%;">
+                            <span class="skill-duration">1年</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <h3>JavaScript</h3>
+                    <div class="skill-bar">
+                        <div class="skill-progress" style="width: 60%;">
+                            <span class="skill-duration">1年</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <h3>Python(Django)</h3>
+                    <div class="skill-bar">
+                        <div class="skill-progress" style="width: 60%;">
+                            <span class="skill-duration">1年</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="skill">
+                    <h3>JAVA</h3>
+                    <div class="skill-bar">
+                        <div class="skill-progress" style="width: 30%;">
+                            <span class="skill-duration">4か月</span>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="message" class="section">
+                <h2>ひとこと</h2>
+                <p>悔いのない3年にするために、全力で頑張ります！！</p>
+            </section>
+        </div>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 有村大旭. All rights reserved.</p>
+            <p>&copy; 2024 有村大旭. All rights reserved.</p>
         </div>
     </footer>
 </body>
