--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="index.html">ホーム</a></li>
                 <li><a href="self-intro.html">自己紹介</a></li>
                 <li><a href="vision.html">ビジョン</a></li>
-                <li><a href="contact.html">お問い合わせ</a></li>
+                <li><a href="ojt.html">OJT計画</a></li>
             </ul>
         </nav>
     </header>
@@ -27,17 +27,17 @@
             <div class="container">
                 <div class="carousel">
                     <div class="carousel-inner">
-                        <div class="carousel-item">
+                        <div class="carousel-item" background="images/スクリーンショット 2024-08-23 144319.png" ;>
                             <h1>AIのスペシャリストへ</h1>
                             <p>有村大旭は、好奇心と創造力でAIのスペシャリストになります。</p>
                             <a href="self-intro.html" class="cta-button">自己紹介</a>
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item" style="background-image: url('/api/placeholder/1920/1080');">
                             <h1>技術革新で業界をリード</h1>
                             <p>先進的なテクノロジーを駆使し、ビジネスの未来を切り開きます。</p>
                             <a href="services.html" class="cta-button">サービス詳細</a>
                         </div>
-                        <div class="carousel-item">
+                        <div class="carousel-item" style="background-image: url('/api/placeholder/1920/1080');">
                             <h1>お客様の成功が私たちの使命</h1>
                             <p>お客様のニーズに合わせたカスタムソリューションを提供します。</p>
                             <a href="about.html" class="cta-button">会社概要</a>
@@ -53,8 +53,13 @@
             <div class="container">
                 <div class="feature-grid">
                     <div class="feature">
-                        <i class="fas fa-code"></i>
-                        <h3>ウェブ開発</h3>
+                        <i class="fas fa-brain"></i>
+                        <h3>AI・機械学習</h3>
+                        <p>AIを活用・作成できるAIのスペシャリストを目指します！</p>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-robot"></i>
+                        <h3>RPA</h3>
                         <p>最新技術を駆使した、高性能で使いやすいウェブサイトやアプリケーションを開発します。</p>
                     </div>
                     <div class="feature">
@@ -74,10 +79,11 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 株式会社イノベート. All rights reserved.</p>
-            <script src="main.js"></script>
+            <p>&copy; 有村大旭. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
