--- a/self-intro.html
+++ b/self-intro.html
@@ -155,7 +155,7 @@
                 <li><a href="index.html">ホーム</a></li>
                 <li><a href="self-intro.html">自己紹介</a></li>
                 <li><a href="vision.html">ビジョン</a></li>
-                <li><a href="contact.html">お問い合わせ</a></li>
+                <li><a href="ojt.html">OJT計画</a></li>
             </ul>
         </nav>
     </header>
