--- a/vision.html
+++ b/vision.html
@@ -1,129 +1,133 @@
-<!-- services.html -->
 <!DOCTYPE html>
 <html lang="ja">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>サービス - 株式会社サンプル</title>
+    <title>ビジョン - Hiroaki Arimura OJT Plan</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        body,
-        html {
-            margin: 0;
-            padding: 0;
-            font-family: 'Arial',
-                sans-serif;
-            line-height: 1.6;
-            color: #333;
-            background-color: #ffffff;
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        header {
-            background-color: #e6f2ff;
-            padding: 20px 0;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-        }
-
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-
-        nav ul li a {
-            text-decoration: none;
-            color: #0066cc;
-            font-weight: bold;
-        }
-
-        .hero {
-            background-color: #f0f8ff;
-            padding: 100px 0;
-            text-align: center;
-        }
-
-        .hero h1 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-            color: #0066cc;
-        }
-
-        .cta-button {
-            display: inline-block;
-            background-color: #0066cc;
-            color: white;
-            padding: 10px 20px;
-            text-decoration: none;
-            border-radius: 5px;
-            font-weight: bold;
-        }
-
-        .features {
-            padding: 50px 0;
-        }
-
-        .feature {
-            margin-bottom: 30px;
-        }
-
-        footer {
-            background-color: #e6f2ff;
-            color: #0066cc;
-            text-align: center;
-            padding: 20px 0;
-            margin-top: 50px;
-        }
-    </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
 </head>
 
 <body>
     <header>
-        <div class="container">
-            <nav>
-                <ul>
-                    <li><a href="index.html">ホーム</a></li>
-                    <li><a href="about.html">自己紹介</a></li>
-                    <li><a href="services.html">3年後の目標</a></li>
-                    <li><a href="contact.html">お問い合わせ</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav class="container">
+            <div class="logo">Hiroaki Arimura OJT Plan</div>
+            <ul class="nav-links">
+                <li><a href="index.html">ホーム</a></li>
+                <li><a href="self-intro.html">自己紹介</a></li>
+                <li><a href="vision.html">ビジョン</a></li>
+                <li><a href="ojt.html">OJT計画</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <section id="services" class="features">
+        <section class="hero">
             <div class="container">
-                <h1>サービス</h1>
-                <div class="feature">
-                    <h2>ウェブ開発</h2>
-                    <p>最新の技術を活用した、高性能で使いやすいウェブサイトやアプリケーションを開発します。</p>
+                <h1>有村大旭のビジョン</h1>
+                <p>「生成AIを用いて、お客様の業務効率化・生産性向上を目的としたシステムを構築できる人材になる</p>
+            </div>
+        </section>
+
+        <!-- <section class="vision-content">
+            <div class="container">
+                <h2 class="section-title">ビジョンステートメント</h2>
+                <h3 class="vision-statement">
+                    「生成AIを用いて、お客様の業務効率化・生産性向上を目的としたシステムを構築できる人材になる」
+                </h3>
+
+                <div class="vision-grid">
+                    <div class="vision-item">
+                        <i class="fas fa-lightbulb"></i>
+                        <h3>イノベーション</h3>
+                        <p>最先端のAI技術を駆使し、常に新しいアイデアと解決策を追求します。</p>
+                    </div>
+                    <div class="vision-item">
+                        <i class="fas fa-users"></i>
+                        <h3>協力</h3>
+                        <p>チームワークを重視し、多様な視点を取り入れて、より良いソリューションを生み出します。</p>
+                    </div>
+                    <div class="vision-item">
+                        <i class="fas fa-chart-line"></i>
+                        <h3>成長</h3>
+                        <p>継続的な学習と自己改善を通じて、個人とチームの成長を追求します。</p>
+                    </div>
+                    <div class="vision-item">
+                        <i class="fas fa-handshake"></i>
+                        <h3>信頼</h3>
+                        <p>誠実さと透明性を重視し、クライアントや同僚との強固な信頼関係を築きます。</p>
+                    </div>
                 </div>
-                <div class="feature">
-                    <h2>AI・機械学習</h2>
-                    <p>ビッグデータを活用し、お客様のビジネスに革新をもたらすAIソリューションを提供します。</p>
-                </div>
-                <div class="feature">
-                    <h2>クラウドソリューション</h2>
-                    <p>安全で効率的なクラウド環境を構築し、ビジネスの成長をサポートします。</p>
+            </div>
+        </section> -->
+
+        <section class="milestone">
+            <div class="container">
+                <h2 class="section-title">ビジョン達成への道のり</h2>
+                <div class="timeline">
+                    <div class="milestone-item">
+                        <div class="milestone-point"></div>
+                        <div class="milestone-content">
+                            <h3 class="milestone-title">担当業務の改善効率化、生産性向上提案をグループ内で発表する</h3>
+                            <p class="milestone-date">2025年3月</p>
+                        </div>
+                    </div>
+                    <div class="milestone-item">
+                        <div class="milestone-point"></div>
+                        <div class="milestone-content">
+                            <h3 class="milestone-title">担当業務の改善効率化、生産制向上を目的としたシステムを1つ構築する</h3>
+                            <p class="milestone-date">2026年3月</p>
+                        </div>
+                    </div>
+                    <div class="milestone-item">
+                        <div class="milestone-point"></div>
+                        <div class="milestone-content">
+                            <h3 class="milestone-title">お役様の業務の改善効率化、生産性向上を目的とした仕組み・システムを1つ構築する</h3>
+                            <p class="milestone-date">2027年3月</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
 
     <footer>
-        <!-- フッターは index.html と同じ -->
+        <div class="container">
+            <p>&copy; 有村大旭. All rights reserved.</p>
+        </div>
     </footer>
+
+    <script>
+        // JavaScript for handling the timeline animation
+        document.addEventListener('DOMContentLoaded', function () {
+            const timeline = document.querySelector('.timeline');
+            const milestones = document.querySelectorAll('.milestone-item');
+
+            function isElementInViewport(el) {
+                const rect = el.getBoundingClientRect();
+                return (
+                    rect.top >= 0 &&
+                    rect.left >= 0 &&
+                    rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
+                    rect.right <= (window.innerWidth || document.documentElement.clientWidth)
+                );
+            }
+
+            function animateMilestones() {
+                milestones.forEach((milestone, index) => {
+                    if (isElementInViewport(milestone)) {
+                        setTimeout(() => {
+                            milestone.classList.add('appear');
+                        }, index * 200);
+                    }
+                });
+            }
+
+            window.addEventListener('scroll', animateMilestones);
+            animateMilestones(); // Initial check on page load
+        });
+    </script>
 </body>
 
 </html>
