--- a/proto.html
+++ b/proto.html
@@ -195,8 +195,9 @@
             <ul class="nav-links">
                 <li><a href="index.html">ホーム</a></li>
                 <li><a href="self-intro.html">自己紹介</a></li>
+                <li><a href="BI-require.html">BIグループが望むスキル</a></li>
+                <li><a href="ojt.html">OJT計画</a></li>
                 <li><a href="vision.html">ビジョン</a></li>
-                <li><a href="contact.html">OJT計画</a></li>
             </ul>
         </nav>
     </header>
