--- a/BI-require.html
+++ b/BI-require.html
@@ -245,10 +245,11 @@
             <div class="container">
                 <div class="value-grid">
                     <div class="value-item">
-                        <h3>BIグループのVISION</h3>
+                        <h3>有村に期待する姿</h3>
                         <p>日常の業務を通じて顧客の課題をを発見
-                            自ら解決策の提案、サービスの提供し、
+                            自ら解決策の提案、サービスを立案し、
                             顧客の唯一無二のパートナーとなる
+
                         </p>
                     </div>
                 </div>
@@ -262,24 +263,24 @@
                     <div class="skill-item">
                         <h3>①業務知識</h3>
                         <ul>
-                            <li>顧客の言葉が分かる</li>
-                            <li>顧客の言葉の背景を理解している</li>
-                            <li>顧客の課題を発見できる</li>
+                            <li>日々の業務を通じて顧客の業務を理解する</li>
+                            <li>顧客の言葉の背景を理解できる</li>
+                            <li>顧客の悩み、課題を発見できる</li>
                         </ul>
                     </div>
                     <div class="skill-item">
                         <h3>②開発力</h3>
                         <ul>
-                            <li>出来上がりをイメージできる</li>
+                            <li>立案したサービスの出来上がりをイメージできる</li>
                             <li>イメージを形にできるプログラミング力</li>
-                            <li>イメージを形にするために必要な情報を理解している</li>
+                            <li>システム構築の経験を積む</li>
                         </ul>
                     </div>
                     <div class="skill-item">
                         <h3>③IT知識</h3>
                         <ul>
-                            <li>幅広いITの知識</li>
-                            <li>どの技術でどの程度、何ができるかを知っている</li>
+                            <li>新技術(AI)等の幅広いIT知識の習得</li>
+                            <li>IT知識をもとに課題解決のサービスを立案する</li>
                         </ul>
                     </div>
                 </div>
