--- a/index.html
+++ b/index.html
@@ -12,13 +12,19 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo">Hiroaki Arimura OJT Plan</div>
+            <a href="index.html" class="logo-link">
+                <div class="logo">Hiroaki Arimura OJT Plan</div>
+            </a>
+            <div class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <ul class="nav-links">
-                <li><a href="index.html">ホーム</a></li>
                 <li><a href="self-intro.html">自己紹介</a></li>
                 <li><a href="BI-require.html">BIグループが望むスキル</a></li>
                 <li><a href="ojt.html">OJT計画</a></li>
-                <li><a href="vision.html">ビジョン</a></li>
+                <li><a href="vision.html">VISION</a></li>
             </ul>
         </nav>
     </header>
@@ -30,18 +36,23 @@
                     <div class="carousel-inner">
                         <div class="carousel-item" background="images/スクリーンショット 2024-08-23 144319.png" ;>
                             <h1>AIのスペシャリストへ</h1>
-                            <p>有村大旭は、好奇心と創造力でAIのスペシャリストになります。</p>
+                            <p>aaaaは、好奇心と創造力でAIのスペシャリストになります。</p>
                             <a href="self-intro.html" class="cta-button">自己紹介</a>
                         </div>
                         <div class="carousel-item" style="background-image: url('/api/placeholder/1920/1080');">
-                            <h1>技術革新で業界をリード</h1>
+                            <h1>XXXXの収益性の高いビジネス創出を<br>目指すxxグループ</h1>
                             <p>先進的なテクノロジーを駆使し、ビジネスの未来を切り開きます。</p>
-                            <a href="services.html" class="cta-button">サービス詳細</a>
+                            <a href="BI-require.html" class="cta-button">BIグループが望むスキル</a>
                         </div>
                         <div class="carousel-item" style="background-image: url('/api/placeholder/1920/1080');">
-                            <h1>お客様の成功が私たちの使命</h1>
-                            <p>お客様のニーズに合わせたカスタムソリューションを提供します。</p>
-                            <a href="about.html" class="cta-button">会社概要</a>
+                            <h1>有村大旭のOJT計画</h1>
+                            <p>３か年計画の全貌</p>
+                            <a href="ojt.html" class="cta-button">OJT計画</a>
+                        </div>
+                        <div class="carousel-item" style="background-image: url('/api/placeholder/1920/1080');">
+                            <h1>有村大旭のVISION</h1>
+                            <p>何を目指しどこへ向かうのか？</p>
+                            <a href="vision.html" class="cta-button">VISION</a>
                         </div>
                     </div>
                     <a href="#" class="carousel-control prev">&lt;</a>
