--- a/vision.html
+++ b/vision.html
@@ -5,20 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ビジョン - Hiroaki Arimura OJT Plan</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-</head>
+    </head>
 
 <body>
     <header>
         <nav class="container">
-            <div class="logo">Hiroaki Arimura OJT Plan</div>
+            <a href="index.html" class="logo-link">
+                <div class="logo">Hiroaki Arimura OJT Plan</div>
+            </a>
+            <div class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <ul class="nav-links">
-                <li><a href="index.html">ホーム</a></li>
                 <li><a href="self-intro.html">自己紹介</a></li>
                 <li><a href="BI-require.html">BIグループが望むスキル</a></li>
                 <li><a href="ojt.html">OJT計画</a></li>
-                <li><a href="vision.html">ビジョン</a></li>
+                <li><a href="vision.html">VISION</a></li>
             </ul>
         </nav>
     </header>
@@ -26,71 +32,69 @@
     <main>
         <section class="hero">
             <div class="container">
-                <h1>有村大旭のビジョン</h1>
-                <p>「生成AIを用いて、お客様の業務効率化・生産性向上を目的としたシステムを構築できる人材になる</p>
+                <h1>ビジョン</h1>
+                <p>AIで未来を創る、業務効率化のスペシャリストへ</p>
             </div>
         </section>
 
-        <!-- <section class="vision-content">
+        <section class="section">
             <div class="container">
-                <h2 class="section-title">ビジョンステートメント</h2>
-                <h3 class="vision-statement">
-                    「生成AIを用いて、お客様の業務効率化・生産性向上を目的としたシステムを構築できる人材になる」
-                </h3>
-
+                <h2 class="section-title">私のビジョン</h2>
                 <div class="vision-grid">
                     <div class="vision-item">
-                        <i class="fas fa-lightbulb"></i>
-                        <h3>イノベーション</h3>
-                        <p>最先端のAI技術を駆使し、常に新しいアイデアと解決策を追求します。</p>
-                    </div>
-                    <div class="vision-item">
-                        <i class="fas fa-users"></i>
-                        <h3>協力</h3>
-                        <p>チームワークを重視し、多様な視点を取り入れて、より良いソリューションを生み出します。</p>
-                    </div>
-                    <div class="vision-item">
-                        <i class="fas fa-chart-line"></i>
-                        <h3>成長</h3>
-                        <p>継続的な学習と自己改善を通じて、個人とチームの成長を追求します。</p>
-                    </div>
-                    <div class="vision-item">
-                        <i class="fas fa-handshake"></i>
-                        <h3>信頼</h3>
-                        <p>誠実さと透明性を重視し、クライアントや同僚との強固な信頼関係を築きます。</p>
+                        <h3>AIの力で、創造性を解き放つ</h3>
+                        <p>退屈な作業から解放し、誰もが創造性を発揮できる世界を実現する</p>
                     </div>
                 </div>
-            </div>
-        </section> -->
-
-        <section class="milestone">
-            <div class="container">
-                <h2 class="section-title">ビジョン達成への道のり</h2>
-                <div class="timeline">
-                    <div class="milestone-item">
-                        <div class="milestone-point"></div>
-                        <div class="milestone-content">
-                            <h3 class="milestone-title">担当業務の改善効率化、生産性向上提案をグループ内で発表する</h3>
-                            <p class="milestone-date">2025年3月</p>
-                        </div>
+                <div class="vision-grid">
+                    <div class="vision-item">
+                        <h3>時間と心に自由を生み出す</h3>
+                        <p>生産性向上に貢献し、人々に時間と心の余裕をもたらす</p>
                     </div>
-                    <div class="milestone-item">
-                        <div class="milestone-point"></div>
-                        <div class="milestone-content">
-                            <h3 class="milestone-title">担当業務の改善効率化、生産制向上を目的としたシステムを1つ構築する</h3>
-                            <p class="milestone-date">2026年3月</p>
-                        </div>
-                    </div>
-                    <div class="milestone-item">
-                        <div class="milestone-point"></div>
-                        <div class="milestone-content">
-                            <h3 class="milestone-title">お役様の業務の改善効率化、生産性向上を目的とした仕組み・システムを1つ構築する</h3>
-                            <p class="milestone-date">2027年3月</p>
-                        </div>
+                </div>
+                <div class="vision-grid">
+                    <div class="vision-item">
+                        <h3>技術力だけでなく課題発見力を磨く</h3>
+                        <p>本質的な課題に着目して実現可能な解決策を提案できる人材になる</p>
                     </div>
                 </div>
             </div>
         </section>
+
+
+        <section id="services" class="features">
+            <div class="container">
+                <h2 class="section-title">やりたいこと</h2>
+                <div class="feature-grid">
+                    <div class="feature">
+                        <i class="fas fa-brain"></i>
+                        <h3>AIのAPIを用いたアプリ開発</h3>
+                        <p>ChatGPTやClaudeを利用して生産性向上させるアプリを開発したい</p>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-comment"></i>
+                        <h3>自然言語処理</h3>
+                        <p>社内だけでなく顧客向けに研修を開催してみたい</p>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-robot"></i>
+                        <h3>RPA</h3>
+                        <p>定型的な業作業を自動化させるシステムを開発したい</p>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-graduation-cap"></i>
+                        <h3>生成AI活用方法の講座開催</h3>
+                        <p>社内だけでなく顧客向けに研修を開催してみたい</p>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-project-diagram"></i>
+                        <h3>上流工程に参加</h3>
+                        <p>安全で効率的なクラウド環境を構築し、ビジネスの成長をサポートします。</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
@@ -99,36 +103,7 @@
         </div>
     </footer>
 
-    <script>
-        // JavaScript for handling the timeline animation
-        document.addEventListener('DOMContentLoaded', function () {
-            const timeline = document.querySelector('.timeline');
-            const milestones = document.querySelectorAll('.milestone-item');
-
-            function isElementInViewport(el) {
-                const rect = el.getBoundingClientRect();
-                return (
-                    rect.top >= 0 &&
-                    rect.left >= 0 &&
-                    rect.bottom <= (window.innerHeight || document.documentElement.clientHeight) &&
-                    rect.right <= (window.innerWidth || document.documentElement.clientWidth)
-                );
-            }
-
-            function animateMilestones() {
-                milestones.forEach((milestone, index) => {
-                    if (isElementInViewport(milestone)) {
-                        setTimeout(() => {
-                            milestone.classList.add('appear');
-                        }, index * 200);
-                    }
-                });
-            }
-
-            window.addEventListener('scroll', animateMilestones);
-            animateMilestones(); // Initial check on page load
-        });
-    </script>
+    <script src="main.js"></script>
 </body>
 
 </html>
