--- a/ojt.html
+++ b/ojt.html
@@ -4,410 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>OJT計画 - Hiroaki Arimura OJT Plan</title>
     <style>
-        :root {
-            --primary-color: #3498db;
-            --secondary-color: #2c3e50;
-            --accent-color: #e74c3c;
-            --bg-color: #ecf0f1;
-            --text-color: #34495e;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: var(--text-color);
-            background-color: var(--bg-color);
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        header {
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 30px 0;
-        }
-
-        .logo {
-            font-size: 1.8em;
-            font-weight: bold;
-            color: var(--primary-color);
-        }
-
-        .nav-links {
-            display: flex;
-            list-style: none;
-        }
-
-        .nav-links li {
-            margin-left: 40px;
-        }
-
-        .nav-links a {
-            text-decoration: none;
-            color: var(--secondary-color);
-            font-weight: 500;
-            font-size: 1.1em;
-            transition: color 0.3s ease;
-        }
-
-        .nav-links a:hover {
-            color: var(--primary-color);
-        }
-
-        .milestone {
-            padding: 100px 0;
-            background-color: var(--bg-color);
-        }
-
-        .section-title {
-            font-size: 2.5em;
-            text-align: left;
-            margin-bottom: 50px;
-            color: var(--secondary-color);
-        }
-
-        .timeline {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: relative;
-            padding: 60px 0;
-            /* パディングを増やして、上下のスペースを確保 */
-        }
-
-        .timeline::before {
-            content: '';
-            position: absolute;
-            top: 70px;
-            /* 上からの位置を固定 */
-            left: 0;
-            right: 0;
-            height: 4px;
-            background-color: var(--secondary-color);
-        }
-
-        .milestone-item {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            position: relative;
-            z-index: 1;
-            min-width: 150px;
-        }
-
-        .milestone-point {
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            background-color: var(--primary-color);
-            position: relative;
-            z-index: 2;
-            margin-bottom: 20px;
-            /* 点の下のスペースを増やす */
-        }
-
-        .milestone-content {
-            text-align: center;
-            max-width: 150px;
-        }
 
 
-        .milestone-title {
-            font-size: 1.2em;
-            font-weight: bold;
-            color: var(--secondary-color);
-            margin-bottom: 5px;
-        }
-
-        .milestone-date {
-            font-size: 0.9em;
-            color: var(--text-color);
-        }
-
-        footer {
-            background-color: var(--secondary-color);
-            color: white;
-            text-align: center;
-            padding: 30px 0;
-        }
-
-        @media (max-width: 768px) {
-            .timeline {
-                flex-direction: column;
-                align-items: flex-start;
-                padding: 20px 0;
-            }
-
-            .timeline::before {
-                top: 0;
-                bottom: 0;
-                left: 10px;
-                width: 4px;
-                height: auto;
-            }
-
-            .milestone-item {
-                flex-direction: row;
-                margin-bottom: 20px;
-                width: 100%;
-            }
-
-            .milestone-point {
-                margin-right: 20px;
-                margin-bottom: 0;
-            }
-
-            .milestone-content {
-                text-align: left;
-            }
-        }
-
-        /* 業務知識のデザイン */
-        .business-knowledge {
-            background-color: var(--bg-color);
-            padding-bottom: 40px;
-            padding-top: 50px;
-        }
-
-        .knowledge-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            margin-top: 30px;
-        }
-
-        .knowledge-item {
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            height: 100%;
-            padding: 20px;
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-        }
-
-        .knowledge-item h3 {
-            margin-bottom: 15px;
-            padding: 5px 10px;
-            background-color: #3498db;
-            color: white;
-            border-radius: 4px;
-            display: inline-block;
-        }
-
-        .knowledge-item p {
-            flex-grow: 1;
-            margin: 0;
-        }
-
-        @media (max-width: 768px) {
-            .knowledge-grid {
-                grid-template-columns: 1fr;
-            }
-        }
-
-        .hero {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: white;
-            padding: 100px 0 50px;
-            text-align: center;
-        }
-
-        .hero h1 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-        }
-
-        .hero p {
-            font-size: 1.2em;
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        .skills-section {
-            background-color: var(--bg-color);
-            padding-bottom: 60px;
-        }
-
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 30px;
-            margin-top: 30px;
-        }
-
-        .skill-item {
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-        }
-
-        .skill-item h3 {
-            color: var(--primary-color);
-            margin-bottom: 15px;
-        }
-
-        .skill-item ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-
-        .skill-item li {
-            margin-bottom: 10px;
-            padding-left: 20px;
-            position: relative;
-        }
-
-        .skill-item li::before {
-            content: '✓';
-            position: absolute;
-            left: 0;
-            color: var(--primary-color);
-        }
-
-        .yearly-goals {
-            margin-top: 40px;
-        }
-
-        .yearly-goal {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-
-        .goal-header {
-            display: flex;
-            align-items: center;
-            margin-bottom: 20px;
-        }
-
-        .goal-icon {
-            width: 60px;
-            height: 60px;
-            background-color: #3498db;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 24px;
-            margin-right: 20px;
-        }
-
-        .goal-year {
-            font-size: 24px;
-            font-weight: bold;
-        }
-
-        .goal-details {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-        }
-
-        .goal-detail h3 {
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-
-        .goal-detail p {
-            color: #666;
-        }
-
-        .section-yearly-goals {
-            background-color: var(--bg-color);
-            padding: 2rem 0;
-        }
-
-        .section-title {
-            color: #333;
-            font-size: 1.5rem;
-            font-weight: bold;
-            margin-bottom: 1rem;
-        }
-
-        .yearly-goal-container {
-            margin-top: 1rem;
-        }
-
-        .yearly-goal-card {
-            background-color: #fff;
-            border-radius: 0.5rem;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 1.5rem;
-        }
-
-        .yearly-goal-year {
-            font-size: 1.25rem;
-            font-weight: bold;
-            color: #333;
-            margin-bottom: 1rem;
-        }
-
-        .objective-container {
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-        }
-
-        .objective-item {
-            border-left-width: 4px;
-            border-radius: 0.25rem;
-            padding: 1rem;
-        }
-
-        .objective-item.goal {
-            background-color: #f0f0f0;
-            border-left-color: #007bff;
-        }
-
-        .objective-item.means {
-            background-color: #f0f0f0;
-            border-left-color: #28a745;
-        }
-
-        .objective-item.kpi {
-            background-color: #f0f0f0;
-            border-left-color: #dc3545;
-        }
-
-        .objective-title {
-            font-size: 1rem;
-            font-weight: bold;
-            color: #333;
-            margin-bottom: 0.5rem;
-        }
-
-        .objective-content {
-            font-size: 1rem;
-            color: #333;
-        }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -415,19 +16,25 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo">Hiroaki Arimura OJT Plan</div>
+            <a href="index.html" class="logo-link">
+                <div class="logo">Hiroaki Arimura OJT Plan</div>
+            </a>
+            <div class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <ul class="nav-links">
-                <li><a href="index.html">ホーム</a></li>
                 <li><a href="self-intro.html">自己紹介</a></li>
                 <li><a href="BI-require.html">BIグループが望むスキル</a></li>
                 <li><a href="ojt.html">OJT計画</a></li>
-                <li><a href="vision.html">ビジョン</a></li>
+                <li><a href="vision.html">VISION</a></li>
             </ul>
         </nav>
     </header>
 
     <main role="main">
-        <section class="section hero">
+        <section class="hero">
             <div class="container">
                 <h1>OJT計画</h1>
             </div>
@@ -467,11 +74,11 @@
                             </section>
                             <section class="objective-item means">
                                 <h4 class="objective-title">手段：</h4>
-                                <p class="objective-content">先輩社員のフォローを受けながら運用業務をこなす</p>
+                                <p class="objective-content">説明会の実施、3D CAD製品の操作</p>
                             </section>
                             <section class="objective-item kpi">
                                 <h4 class="objective-title">KPI：</h4>
-                                <p class="objective-content">運用業務を累計350時間以上経験する</p>
+                                <p class="objective-content">勉強会・説明会への出席、3D CAD製品での形状の作成</p>
                             </section>
                         </div>
                     </div>
@@ -570,25 +177,72 @@
             </div>
         </section>
 
-        <section class="section section-yearly-goals">
+        <section class="section yearly-goals">
             <div class="container">
-                <h2 class="section-title">1年目の目標計画</h2>
-                <div class="yearly-goal-container">
-                    <div class="yearly-goal-card">
-                        <h3 class="yearly-goal-year">1年目</h3>
-                        <div class="objective-container">
-                            <section class="objective-item goal">
-                                <h4 class="objective-title">目標：</h4>
-                                <p class="objective-content">3D, AVEVA運用業務の流れを知る</p>
-                            </section>
-                            <section class="objective-item means">
-                                <h4 class="objective-title">手段：</h4>
-                                <p class="objective-content">先輩社員のフォローを受けながら運用業務をこなす</p>
-                            </section>
-                            <section class="objective-item kpi">
-                                <h4 class="objective-title">KPI：</h4>
-                                <p class="objective-content">運用業務を累計350時間以上経験する</p>
-                            </section>
+                <h2 class="section-title">開発力 3D関連開発業務</h2>
+                <div class="yearly-goal">
+                    <div class="goal-header">
+                        <div class="goal-icon">
+                            <i class="fas fa-graduation-cap"></i>
+                        </div>
+                        <h2 class="goal-year">1年目</h2>
+                    </div>
+                    <div class="goal-details">
+                        <div class="goal-detail">
+                            <h3>目標:</h3>
+                            <p>C#, SQLの経験を積む</p>
+                        </div>
+                        <div class="goal-detail">
+                            <h3>手段:</h3>
+                            <p>全体が見通せる規模の小型修正を中心に経験</p>
+                        </div>
+                        <div class="goal-detail">
+                            <h3>KPI:</h3>
+                            <p>配管サポート業務：サポート開発、修正5件</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="yearly-goal">
+                    <div class="goal-header">
+                        <div class="goal-icon">
+                            <i class="fas fa-users"></i>
+                        </div>
+                        <h2 class="goal-year">2年目</h2>
+                    </div>
+                    <div class="goal-details">
+                        <div class="goal-detail">
+                            <h3>目標:</h3>
+                            <p>要件定義を経験する</p>
+                        </div>
+                        <div class="goal-detail">
+                            <h3>手段:</h3>
+                            <p>小型案件を単独で遂行する経験をする</p>
+                        </div>
+                        <div class="goal-detail">
+                            <h3>KPI:</h3>
+                            <p>配管サポート業務：サポート開発、修正20件</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="yearly-goal">
+                    <div class="goal-header">
+                        <div class="goal-icon">
+                            <i class="fas fa-chart-line"></i>
+                        </div>
+                        <h2 class="goal-year">3年目</h2>
+                    </div>
+                    <div class="goal-details">
+                        <div class="goal-detail">
+                            <h3>目標:</h3>
+                            <p>開発担当として要件定義～開発を日常的にこなす</p>
+                        </div>
+                        <div class="goal-detail">
+                            <h3>手段:</h3>
+                            <p>担当として主体的に遂行を行う。</p>
+                        </div>
+                        <div class="goal-detail">
+                            <h3>KPI:</h3>
+                            <p>配管サポート業務：サポート開発、修正40件</p>
                         </div>
                     </div>
                 </div>
@@ -635,6 +289,78 @@
             </div>
         </section>
 
+        <section class="section yearly-goals">
+            <div class="container">
+                <h2 class="section-title">IT知識(AI等の新技術)</h2>
+                <div class="yearly-goal">
+                    <div class="goal-header">
+                        <div class="goal-icon">
+                            <i class="fas fa-graduation-cap"></i>
+                        </div>
+                        <h2 class="goal-year">1年目</h2>
+                    </div>
+                    <div class="goal-details">
+                        <div class="goal-detail">
+                            <h3>目標:</h3>
+                            <p>担当業務の改善効率化、生産性向上の提案をグループ内で発表する。</p>
+                        </div>
+                        <div class="goal-detail">
+                            <h3>手段:</h3>
+                            <p>全体が見通せる規模の小型修正を中心に経験</p>
+                        </div>
+                        <div class="goal-detail">
+                            <h3>KPI:</h3>
+                            <p>500時間の開発業務経験</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="yearly-goal">
+                    <div class="goal-header">
+                        <div class="goal-icon">
+                            <i class="fas fa-users"></i>
+                        </div>
+                        <h2 class="goal-year">2年目</h2>
+                    </div>
+                    <div class="goal-details">
+                        <div class="goal-detail">
+                            <h3>目標:</h3>
+                            <p>担当業務の改善効率化、生産制向上を目的としたシステムを1つ構築する</p>
+                        </div>
+                        <div class="goal-detail">
+                            <h3>手段:</h3>
+                            <p>小型案件を単独で遂行する経験をする</p>
+                        </div>
+                        <div class="goal-detail">
+                            <h3>KPI:</h3>
+                            <p>1,000時間の開発経験</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="yearly-goal">
+                    <div class="goal-header">
+                        <div class="goal-icon">
+                            <i class="fas fa-chart-line"></i>
+                        </div>
+                        <h2 class="goal-year">3年目</h2>
+                    </div>
+                    <div class="goal-details">
+                        <div class="goal-detail">
+                            <h3>目標:</h3>
+                            <p>お役様の業務の改善効率化、生産性向上を目的とした仕組み・システムを1つ構築する</p>
+                        </div>
+                        <div class="goal-detail">
+                            <h3>手段:</h3>
+                            <p>担当として主体的に遂行を行う。</p>
+                        </div>
+                        <div class="goal-detail">
+                            <h3>KPI:</h3>
+                            <p>1,000時間の開発経験</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
@@ -642,6 +368,8 @@
             © 有村大旭. All rights reserved.
         </div>
     </footer>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
