--- a/self-intro.html
+++ b/self-intro.html
@@ -5,158 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>自己紹介 - 有村大旭(アリムラ ヒロアキ)</title>
+    <link rel="stylesheet" href="style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
     <style>
-        :root {
-            --primary-color: #3498db;
-            --secondary-color: #2c3e50;
-            --accent-color: #e74c3c;
-            --bg-color: #ecf0f1;
-            --text-color: #34495e;
-        }
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.6;
-            color: var(--text-color);
-            background-color: var(--bg-color);
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        header {
-            background-color: white;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-        }
-
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 30px 0;
-        }
-
-        .logo {
-            font-size: 1.8em;
-            font-weight: bold;
-            color: var(--primary-color);
-        }
-
-        .nav-links {
-            display: flex;
-            list-style: none;
-        }
-
-        .nav-links li {
-            margin-left: 40px;
-        }
-
-        .nav-links a {
-            text-decoration: none;
-            color: var(--secondary-color);
-            font-weight: 500;
-            font-size: 1.1em;
-            transition: color 0.3s ease;
-        }
-
-        .nav-links a:hover {
-            color: var(--primary-color);
-        }
-
-        main {
-            padding-top: 100px;
-        }
-
-        .section {
-            padding: 80px 0;
-        }
-
-        .section h2 {
-            font-size: 2em;
-            margin-bottom: 30px;
-            color: var(--secondary-color);
-        }
-
-        .profile-image {
-            text-align: center;
-            margin-bottom: 40px;
-        }
-
-        .profile-image img {
-            width: 200px;
-            height: 200px;
-            border-radius: 50%;
-            object-fit: cover;
-        }
-
-        .skill {
-            margin-bottom: 20px;
-        }
-
-        .skill h3 {
-            margin-bottom: 10px;
-        }
-
-        .skill-bar {
-            background-color: #ddd;
-            height: 20px;
-            border-radius: 10px;
-            overflow: hidden;
-        }
-
-        .skill-progress {
-            background-color: var(--primary-color);
-            height: 100%;
-            display: flex;
-            align-items: center;
-            padding-left: 10px;
-            color: white;
-            font-size: 0.8em;
-        }
-
-        footer {
-            background-color: var(--secondary-color);
-            color: white;
-            text-align: center;
-            padding: 30px 0;
-        }
-
-        @media (max-width: 768px) {
-            .nav-links {
-                display: none;
-            }
-
-            main {
-                padding-top: 80px;
-            }
-        }
     </style>
 </head>
 
 <body>
     <header>
         <nav class="container">
-            <div class="logo">Hiroaki Arimura OJT Plan</div>
+            <a href="index.html" class="logo-link">
+                <div class="logo">Hiroaki Arimura OJT Plan</div>
+            </a>
+            <div class="hamburger-menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
             <ul class="nav-links">
-                <li><a href="index.html">ホーム</a></li>
                 <li><a href="self-intro.html">自己紹介</a></li>
                 <li><a href="BI-require.html">BIグループが望むスキル</a></li>
                 <li><a href="ojt.html">OJT計画</a></li>
-                <li><a href="vision.html">ビジョン</a></li>
+                <li><a href="vision.html">VISION</a></li>
             </ul>
         </nav>
     </header>
@@ -234,6 +106,8 @@
             <p>&copy; 2024 有村大旭. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="main.js"></script>
 </body>
 
 </html>
